Added fo-modal-paddin mixin

--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -49,6 +49,7 @@
       z-index: 2;
       transform: translateX(-$large);
       cursor: pointer;
+      font-size: 0.9em;
     }
 
     material-icon.leading, fo-icon.leading {
