--- a/lib/components/fo_modal/_mixins.scss
+++ b/lib/components/fo_modal/_mixins.scss
@@ -19,6 +19,23 @@
   }
 }
 
+@mixin fo-modal-padding($vertical, $horizontal) {
+  ::ng-deep fo-modal {
+    div#modalOverlay {
+      div#modalContent {
+        div#modalHeader,
+        div#modalFooter {
+          padding: $vertical $horizontal !important; 
+        }
+        div#modalMain {
+          padding-left: $horizontal !important;
+          padding-right: $horizontal !important;
+        }
+      }
+    }
+  }
+}
+
 @mixin fo-modal-font-size($size) {
   ::ng-deep fo-modal {
     div#modalOverlay {
@@ -27,8 +44,9 @@
           div#modalHeaderTitle {
             h2 {
               font-size: $size !important;
-            }            
+            }
           }
+
           @include fo-button-font-size(0.6*$size);
         }
       }
