--- a/lib/components/fo_modal/fo_modal_component.html
+++ b/lib/components/fo_modal/fo_modal_component.html
@@ -2,8 +2,7 @@
      id="modalOverlay">
   <div id="modalContent"
        [style.transform]="transform">
-    <div id="modalHeader"
-         class="themeable">
+    <div id="modalHeader">
       <div id="modalHeaderTitle">
         <h2 *ngIf="header != null">{{header}}</h2>
       </div>
