--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -20,11 +20,10 @@
            (keyup)="onKeyUp($event)"
            (focus)="onFocus($event)"
            (blur)="onBlur($event)">
-    <fo-icon *ngIf="clearIcon == true && value?.isEmpty == false"
-             size="large"
-             class="color-alert clear"
-             icon="cancel"
-             [material]="true"
+    <fo-icon *ngIf="clearIcon == true && value?.isEmpty == false"             
+             class="clear"
+             icon="close"
+             [material]="materialIcons"
              (click)="onClear($event)"></fo-icon>
     <fo-button *ngIf="actionButtonLabel != null"
                [label]="actionButtonLabel"
