--- a/lib/components/fo_button/fo_button_component.scss
+++ b/lib/components/fo_button/fo_button_component.scss
@@ -14,7 +14,7 @@
     -webkit-user-select: none;
     transition: color 0.3s ease, border-color 0.3s ease, background-color 0.3s ease;
     cursor: pointer;
-    padding: $small $x-large;
+    padding: $small $medium;
     outline: none;
     border-width: 1px;
     border-style: solid;
@@ -25,9 +25,29 @@
     overflow: hidden;
     text-overflow: ellipsis;
     border-radius: $x-small;
+    display: flex;
+    justify-content: space-between;
 
+
+    fo-icon,
     material-icon {
       margin: 0;
+    }
+
+    div#leading {
+      margin-right: $x-small;
+    }
+
+    div#trailing {
+      margin-left: $x-small;
+    }
+
+    div#center {
+      fo-icon.spaced::before {
+        content: ' '
+      }
+
+      flex: auto;
     }
   }
 }
@@ -50,7 +70,7 @@
 
 :host[dense] {
   button {
-    padding: $small $large;
+    padding: $small;
     line-height: 100%;
 
     @include material-icon-size(1.3rem);
@@ -66,8 +86,8 @@
 
 :host[clearSize] {
   button {
-    padding-left: $small;
-    padding-right: $small;
+    padding-left: $x-small;
+    padding-right: $x-small;
   }
 }
 
