--- a/lib/components/fo_button/fo_button_component.scss
+++ b/lib/components/fo_button/fo_button_component.scss
@@ -35,11 +35,11 @@
     }
 
     div#leading {
-      margin-right: $x-small;
+      margin-right: $small;
     }
 
     div#trailing {
-      margin-left: $x-small;
+      margin-left: $small;
     }
 
     div#center {
