--- a/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.scss
+++ b/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.scss
@@ -21,6 +21,9 @@
         cursor: pointer;
         margin: $x-small;
         padding: $small;
+      }
+
+      li.round {
         border-radius: $x-small;
       }
 
