--- a/lib/components/fo_number_input/fo_number_input_component.html
+++ b/lib/components/fo_number_input/fo_number_input_component.html
@@ -11,6 +11,7 @@
   <fo-text-input noRightBorder
                  noLeftBorder
                  centerValue
+                 noFocusShadow
                  [attr.tabindex]="tabIndex"
                  [disabled]="disabled"
                  [options]="options"
