removed unused class

--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -5,7 +5,7 @@
              class="gray-color leading"
              [icon]="leadingIcon"
              [material]="materialIcons"></fo-icon>
-    <input class="roundLeft gray-color-bright"
+    <input class="gray-color-bright"
            type="{{type}}"
            [autoFocus]="autoFocus"
            [disabled]="disabled == true"
