Added fo-image-file-min-height mixin

--- a/lib/components/fo_image_file/_mixins.scss
+++ b/lib/components/fo_image_file/_mixins.scss
@@ -5,3 +5,11 @@
     }
   }
 }
+
+@mixin fo-image-file-min-height($height) {
+  ::ng-deep fo-image-file {
+    div.container {
+      min-height: $height;
+    }
+  }
+}
