--- a/lib/components/fo_image_file/fo_image_file_component.scss
+++ b/lib/components/fo_image_file/fo_image_file_component.scss
@@ -7,6 +7,9 @@
     border-style: dashed;
     padding: 0.5rem;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     div.image {
       @include boxShadow();
