added tooltip to image-file

--- a/lib/components/fo_image_file/_mixins.scss
+++ b/lib/components/fo_image_file/_mixins.scss
@@ -2,6 +2,10 @@
   ::ng-deep fo-image-file {
     div.container {
       border-color: $color;
+
+      p#placeholder {
+        color: $color;
+      }
     }
   }
 }
