--- a/lib/components/fo_image_file/fo_image_file_component.html
+++ b/lib/components/fo_image_file/fo_image_file_component.html
@@ -19,15 +19,16 @@
                icon="delete">
     </fo-button>
   </div>
-  <fo-button class="add"             
-             white
-             dense
-             *ngIf="source == null || source.isEmpty"
-             [disabled]="disabled"
-             (trigger)="fileInput.click()"
-             [materialIcon]="materialIcon"
-             icon="add_a_photo">
-  </fo-button>
+  <ng-container *ngIf="source == null || source.isEmpty">
+    <fo-button white               
+               [disabled]="disabled"
+               (trigger)="fileInput.click()"
+               [materialIcon]="materialIcon"
+               icon="add_a_photo">
+    </fo-button>
+    <p id="placeholder"
+       *ngIf="placeholder != null"> {{placeholder}} </p>
+  </ng-container>
   <input type="file"
          #fileInput
          (change)="onFileChange($event)"
