--- a/lib/components/fo_label/fo_label_component.scss
+++ b/lib/components/fo_label/fo_label_component.scss
@@ -1,11 +1,13 @@
 @import 'package:grid_css/constants';
 @import '../../mixins.scss';
 
-:host {  
-  div#label {    
+:host {
+  max-width: 100%;
+
+  div#label {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    cursor: pointer;  
+    cursor: pointer;
   }
 }
