--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -42,8 +42,8 @@ $transitionSpeed: 0.3s ease;
   @include fo-dropdown-list-colors($primaryColor, $grayColorBright);
   @include fo-dropdown-select-multi-options-background-color($primaryColor);
   @include fo-dropdown-select-multi-options-border-color($grayColor);
-  @include fo-file-upload-border-color($grayColor);
-  @include fo-image-file-border-color($grayColor);
+  @include fo-file-upload-border-color($grayColorBright);
+  @include fo-image-file-border-color($grayColorBright);
   @include fo-label-color($grayColor);
   @include fo-modal-colors(lighten($grayColorBright, 10%));
   @include fo-tab-panel-colors(darken($grayColor, $lightstep), $primaryColor);
