--- a/lib/components/fo_modal/fo_modal_component.scss
+++ b/lib/components/fo_modal/fo_modal_component.scss
@@ -3,6 +3,9 @@
 @import 'package:fo_components/mixins';
 
 :host {
+  .hidden {
+    display: none;
+  }
   div#modalOverlay {
     background-color: rgba(0, 0, 0, 0.6);
     position: fixed;
