made button nicer

--- a/lib/components/fo_modal/fo_modal_component.html
+++ b/lib/components/fo_modal/fo_modal_component.html
@@ -7,8 +7,7 @@
       <div id="modalHeaderTitle">
         <h2 *ngIf="header != null">{{header}}</h2>
       </div>
-      <fo-button clearSize
-                 white
+      <fo-button white
                  dense
                  *ngIf="showCloseButton == true"
                  icon="close"
