updated to comply with refactored button color mixin

--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -38,7 +38,7 @@ $transitionSpeed: 0.3s ease;
   @include material-radio-color($primaryColor);
   @include material-toggle-theme($primaryColor);
 
-  @include fo-button-colors(white, $primaryColor, $primaryColorBright, $grayColorBright);
+  @include fo-button-colors(white, $primaryColor, $grayColorBright);
   @include fo-dropdown-list-colors($primaryColor, $grayColorBright);
   @include fo-dropdown-select-multi-options-background-color($primaryColor);
   @include fo-dropdown-select-multi-options-border-color($grayColor);
