added quiz buttonColor

--- a/lib/components/fo_quiz/fo_option_component.html
+++ b/lib/components/fo_quiz/fo_option_component.html
@@ -1,5 +1,5 @@
 <fo-button [label]="model.label"
-           white
+           [themeBackgroundColor]="buttonColor"
            [class.selected]="model.selected"
            (trigger)="onSelect()"
            [disabled]="disabled">
