--- a/lib/components/fo_icon/fo_icon_component.html
+++ b/lib/components/fo_icon/fo_icon_component.html
@@ -1,5 +1,5 @@
-<material-icon *ngIf="material == true"
-               [style.font-size]="size"
+<material-icon *ngIf="material == true"               
+               size="medium"
                baseline
                [icon]="icon"></material-icon>
 <ng-container *ngIf="material != true">
