added some margin to dropdown list icons

--- a/lib/components/fo_dropdown_list/_mixins.scss
+++ b/lib/components/fo_dropdown_list/_mixins.scss
@@ -27,7 +27,7 @@
         font-size: $size;
         @include material-icon-size($size !important);
         tr {
-          td.leadingIcon {
+          td.icon {
             width: $size * 1.5;
           }
         }
