--- a/lib/components/fo_dropdown_select/fo_dropdown_select_component.scss
+++ b/lib/components/fo_dropdown_select/fo_dropdown_select_component.scss
@@ -33,7 +33,7 @@
         color: #555;
         user-select: none;
         fo-icon {
-          margin-right: $x-small;
+          margin-right: $small;
         }
       }
 
