added fo-button-vertical-padding mixin

--- a/lib/components/fo_button/_mixins.scss
+++ b/lib/components/fo_button/_mixins.scss
@@ -15,6 +15,15 @@
   }
 }
 
+@mixin fo-button-vertical-padding($value) {
+  ::ng-deep fo-button {
+    button.themeable {
+      padding-top: $value;
+      padding-bottom: $value;
+    }
+  }
+}
+
 @mixin fo-button-colors($color, $backgroundColor, $backgroundColorDisabled) {
 
   // Default
