--- a/lib/components/fo_number_input/fo_number_input_component.scss
+++ b/lib/components/fo_number_input/fo_number_input_component.scss
@@ -1,6 +1,8 @@
 :host {
   div#flexContainer {
     display: flex;
+    align-items: stretch;
+    height: 100%;
 
     fo-text-input {
       flex: auto;
