--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -26,7 +26,8 @@
 
   div#flexContainer {
     display: flex;
-    align-items: center;
+    align-items: stretch;
+    height: 100%;
     transition: box-shadow $transitionSpeed;
     border-radius: $borderRadius;
 
@@ -103,6 +104,7 @@
 }
 
 :host[noLeftBorder] {
+
   div#flexContainer,
   div#flexContainer input {
     border-top-left-radius: 0;
@@ -145,10 +147,10 @@
 }
 
 :host[square] {
-  fo-label {    
+  fo-label {
     div#flexContainer {
       border-radius: 0;
-  
+
       input {
         border-top-left-radius: 0;
         border-bottom-left-radius: 0;
