--- a/lib/components/fo_quiz/fo_option_component.scss
+++ b/lib/components/fo_quiz/fo_option_component.scss
@@ -4,4 +4,10 @@
   fo-button {
     margin: $x-small;
   }
+
+  fo-button.selected {
+    filter: brightness(130%);
+    -webkit-filter: brightness(130%);    
+  }
+  
 }
