Output container no longer showing when no values are selected

--- a/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.html
+++ b/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.html
@@ -9,7 +9,7 @@
                     [constrainToViewPort]="constrainToViewPort"
                     (actionButtonTrigger)="onAdd(selectedId)"
                     [(selectedId)]="selectedId"></fo-dropdown-select>
-<div id="selectedOptions">
+<div id="selectedOptions" *ngIf="addedOptions.isNotEmpty">
   <ul>
     <li *ngFor="let option of addedOptions"
         (click)="onRemove(option.renderId)"
