--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
@@ -2,7 +2,9 @@
              [width]="width"
              [attr.square]="square"
              [offsetTop]="offsetTop"
+             [offsetHorizontal]="offsetHorizontal"
              [constrainToViewPort]="constrainToViewPort"
+             [targetPosition]="targetPosition"
              [visible]="visible"
              (visibleChange)="visibleController.add($event)">
   <div id="filterContainer">
