offsetTop and offsetHorizontal now null by default

--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -38,6 +38,7 @@
   </fo-error-output>
   <fo-dropdown-list *ngIf="options != null && value?.isEmpty == false && dropdownVisible"
                     [options]="options"
+                    [offsetTop]="null"
                     [attr.square]="square"
                     [filter]="value"
                     [constrainToViewPort]="constrainToViewPort"
